z-index and cart color fix

--- a/style.scss
+++ b/style.scss
@@ -70,7 +70,13 @@ body {
 
 .nav-icon {
   font-size: 2.5rem;
+  color: #1156a0;
+
+  .cart-items{
+    font-size: 1.5rem;
+  }
 }
+
 
 .cart-btn {
   position: relative;
@@ -295,7 +301,7 @@ background-position: center;
   height: 100%;
   transition: $mainTransition;
   background: rgba(166, 187, 219, 0.5);
-  z-index: 2;
+  z-index: 4;
   visibility: hidden;
 }
 
@@ -306,7 +312,7 @@ background-position: center;
   width: 100%;
   height: 100%;
   overflow: scroll;
-  z-index: 3;
+  z-index: 4;
   background: rgba(231, 226, 221, 0.74);
   padding: 1.5rem;
   transition: $mainTransition;
